# rsnav

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SKILL.md
crates/bsp/: Cargo.toml  README.md
crates/bsp/examples/: locate_and_nearest.rs
crates/bsp/src/: lib.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: aabb.rs  aabb3.rs  geom.rs  ids.rs  lib.rs  mesh2d.rs  offset.rs  par.rs  planarize.rs  polygon.rs  rng.rs  triangle.rs  vec3.rs  vertex.rs
crates/crowd/: Cargo.toml  README.md
crates/crowd-demo/: Cargo.toml
crates/crowd-demo/src/: main.rs
crates/crowd/examples/: two_agents_pass.rs
crates/crowd/src/: lib.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/door-demo/: Cargo.toml
crates/door-demo/src/: main.rs
crates/dynamic/: Cargo.toml  README.md
crates/dynamic/examples/: erode_vs_inset.rs  live_worker.rs  mesh_anatomy.rs  par_bench.rs  pbm_bench.rs  stage_bench.rs
crates/dynamic/src/: lib.rs
crates/fixtures/: Cargo.toml
crates/fixtures/src/: main.rs
crates/layers/: Cargo.toml
crates/layers/src/: assign.rs  lib.rs  mesh.rs  outline.rs
crates/layers/tests/: debug_bridge.rs  debug_dump.rs  decompose.rs
crates/navigation/: Cargo.toml  README.md
crates/navigation/examples/: clearance_three_ways.rs  doors_and_zones.rs  find_path.rs  first_path.rs  tcp_interop.rs  tiled_build.rs  tiled_world.rs  translate_vs_tiled.rs  visibility_region.rs  walk_the_path.rs
crates/navigation/src/: astar.rs  doors.rs  funnel.rs  lib.rs  los.rs  path.rs  tiled.rs  visibility.rs  wall.rs  wall_clearance.rs  world.rs
crates/navigation/tests/: tiled_erosion_seams.rs
crates/navmesh/: Cargo.toml  FORMAT.md  README.md
crates/navmesh/examples/: save_and_load.rs
crates/navmesh/src/: binary.rs  build.rs  lib.rs  navmesh.rs
crates/navmesh/tests/: concave_hole_regression.rs  inset_hole_cross_regression.rs  inset_pipeline.rs
crates/pathing/: Cargo.toml  README.md
crates/pathing/examples/: follow_path.rs
crates/pathing/src/: lib.rs
crates/polygon-extract/: Cargo.toml  README.md
crates/polygon-extract/examples/: erode_and_clearance.rs  grid_to_polygons.rs
crates/polygon-extract/src/: lib.rs
crates/polygon-extract/tests/: erode_adversarial.rs
crates/rtsim/: Cargo.toml
crates/rtsim/src/: main.rs
crates/smoothing-demo/: Cargo.toml
crates/smoothing-demo/src/: main.rs
crates/triangle/: Cargo.toml  README.md
crates/triangle/examples/: inset_rings.rs  triangulate_pslg.rs
crates/triangle/src/: clip.rs  divconq.rs  flip.rs  holes.rs  inset.rs  io.rs  lib.rs  mesh.rs  predicates.rs  pslg.rs  segment.rs  sort.rs  winding.rs
crates/voxel/: Cargo.toml
crates/voxel-demo/: Cargo.toml
crates/voxel-demo/src/: main.rs  obj.rs  pick.rs  stl.rs
crates/voxel/src/: builder.rs  config.rs  contour.rs  distance.rs  funnel.rs  grid.rs  lib.rs  navmesh.rs  output.rs  pathfind.rs  polysoup.rs  portals.rs  synth.rs  voxelize.rs  walkability.rs  watershed.rs
crates/world/: Cargo.toml
crates/world-demo/: Cargo.toml
crates/world-demo/src/: main.rs
crates/world/src/: astar.rs  funnel.rs  lib.rs  path.rs
crates/world/tests/: funnel.rs  locate.rs  stitch.rs
docs/: 01-quickstart.md  02-concepts.md  03-from-grid-astar.md  04-units-and-conventions.md  05-building-navmeshes.md  06-clearance.md  07-paths-and-queries.md  08-moving-agents.md  09-doors-and-navworld.md  10-dynamic-rebuilds.md  11-crowds.md  12-large-worlds.md  13-authored-geometry.md  14-saving-and-loading.md  15-performance-and-determinism.md  16-troubleshooting.md  17-api-map.md  18-interop.md  README.md
fixtures/scenes/: hole-crosses-perimeter.json
scripts/: linkcheck.py
