[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/triangle",
    "crates/polygon-extract",
    "crates/navmesh",
    "crates/bsp",
    "crates/navigation",
    "crates/pathing",
    "crates/dynamic",
    "crates/crowd",
    "crates/crowd-demo",
    "crates/door-demo",
    "crates/demo",
    "crates/world-demo",
    "crates/fixtures",
    "crates/rtsim",
    "crates/smoothing-demo",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/iceisfun/rsnav"

[workspace.dependencies]
rsnav-common = { path = "crates/common", version = "0.1.0" }
rsnav-triangle = { path = "crates/triangle", version = "0.1.0" }
rsnav-polygon-extract = { path = "crates/polygon-extract", version = "0.1.0" }
rsnav-navmesh = { path = "crates/navmesh", version = "0.1.0" }
rsnav-bsp = { path = "crates/bsp", version = "0.1.0" }
rsnav-navigation = { path = "crates/navigation", version = "0.1.0" }
rsnav-pathing = { path = "crates/pathing", version = "0.1.0" }
rsnav-dynamic = { path = "crates/dynamic", version = "0.1.0" }
rsnav-crowd = { path = "crates/crowd", version = "0.1.0" }
arc-swap = "1"

[profile.release]
lto = "thin"
codegen-units = 1
