[package]
name = "rsnav-bsp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Binary space partitioning over 2D polygon sets."
keywords = ["bvh", "bsp", "spatial-index", "aabb", "navmesh"]
categories = ["algorithms", "data-structures", "game-development"]
readme = "README.md"

[dependencies]
rsnav-common.workspace = true
rsnav-navmesh.workspace = true

[dev-dependencies]
rsnav-triangle.workspace = true
