[package]
name = "rsnav-demo"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive demo: author a PSLG with the mouse, then probe the resulting navmesh."

[dependencies]
rsnav-common.workspace = true
rsnav-triangle.workspace = true
rsnav-navmesh.workspace = true
rsnav-bsp.workspace = true
rsnav-navigation.workspace = true
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "rsnav-demo"
path = "src/main.rs"
