[package]
name = "rsnav-rtsim"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "RTS-style dynamic-obstacle testbed: bitfield ground truth + worker-thread navmesh updates + agents pathing through the churn."

[dependencies]
rsnav-common.workspace = true
rsnav-polygon-extract.workspace = true
rsnav-navmesh.workspace = true
rsnav-bsp.workspace = true
rsnav-navigation.workspace = true
rsnav-dynamic.workspace = true
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"

[[bin]]
name = "rsnav-rtsim"
path = "src/main.rs"
