[package]
name = "rsnav-smoothing-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Side-by-side demo of bitfield-edge smoothing: diagonal_smoothing on the polygon stage and clip_ears on the CDT stage."

[dependencies]
rsnav-common.workspace = true
rsnav-polygon-extract.workspace = true
rsnav-navmesh.workspace = true
rsnav-dynamic.workspace = true
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"

[[bin]]
name = "rsnav-smoothing-demo"
path = "src/main.rs"
