[package]
name = "rsnav-voxel-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Debug viewer for the rsnav voxel pipeline (input meshes, voxel grid, regions)."

[[bin]]
name = "rsnav-voxel-demo"
path = "src/main.rs"

[dependencies]
rsnav-common.workspace = true
rsnav-voxel.workspace = true
rsnav-layers.workspace = true
rsnav-world.workspace = true
three-d = { version = "0.19", features = ["egui-gui"] }
