[package]
name = "rsnav-world-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive demo: place navmesh tiles in a world, drag them to stitch seams, and path / line-of-sight across tiles."

[dependencies]
rsnav-common.workspace = true
rsnav-triangle.workspace = true
rsnav-navmesh.workspace = true
rsnav-navigation.workspace = true
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"

[[bin]]
name = "rsnav-world-demo"
path = "src/main.rs"
