[package]
name = "rsnav-world"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-layer navmesh world: seam stitching + cross-layer pathing for rsnav"

[dependencies]
rsnav-common = { workspace = true }
rsnav-navmesh = { workspace = true }
rsnav-bsp = { workspace = true }
rsnav-navigation = { workspace = true }

[dev-dependencies]
rsnav-triangle = { workspace = true }
